Removed useless endpoint /get-csv. Added Dockerfile (works), docker-compose (in process). Updated README.md and Swagger documentation
