# pkg/handler/handler.go
@@ -28,7 +28,6 @@ func (h *Handler) InitRoutes() *gin.Engine {
 	router := gin.New()
 
 	router.GET("/get-json", h.getJSON)
-	router.GET("/get-csv", h.getCSV)
 	router.GET("/get-csv-file", h.getCSVFile)
 	router.POST("/upload-csv", h.uploadCSV)
 
@@ -125,58 +124,6 @@ func (h *Handler) getJSON(c *gin.Context) {
 		c.String(http.StatusBadRequest, fmt.Sprintf("Error: '%s'", err))
 	} else {
 		c.JSON(http.StatusOK, transactions)
-	}
-}
-
-// @Summary getCSV
-// @Tags Transactions
-// @Descriptions get response in CSV format
-// @ID get_csv
-// @Produce plain
-// @Param transaction_id query string false "Transaction ID"
-// @Param terminal_id query string false "Terminal ID"
-// @Param status query string false "Status"
-// @Param payment_type query string false "Payment Type"
-// @Param date_post_from query string false "Date Post From (Example: 2022-08-17)"
-// @Param date_post_to query string false "Date Post To (Example: 2022-08-17)"
-// @Param payment_narrative query string false "Payment Narrative (Example: 'про надання послуг')"
-// @Success 200 {string}  string
-// @Failure 400 {string}  string
-// @Router /get-csv [get]
-func (h *Handler) getCSV(c *gin.Context) {
-	var params = map[string]string{}
-	if c.Query("transaction_id") != "" {
-		params["transactionId"] = c.Query("transaction_id")
-	}
-	if c.Query("terminal_id") != "" {
-		params["terminalId"] = c.Query("terminal_id") //Can be more than only one ID
-	}
-	if c.Query("status") != "" {
-		params["status"] = c.Query("status")
-	}
-	if c.Query("payment_type") != "" {
-		params["paymentType"] = c.Query("payment_type")
-	}
-	if c.Query("date_post_from") != "" {
-		params["datePostFrom"] = c.Query("date_post_from")
-	}
-	if c.Query("date_post_to") != "" {
-		params["datePostTo"] = c.Query("date_post_to")
-	}
-	if c.Query("payment_narrative") != "" {
-		params["paymentNarrative"] = c.Query("payment_narrative")
-	}
-
-	transactions, err := h.services.Transaction.GetCSV(params)
-	if err != nil {
-		c.String(http.StatusBadRequest, fmt.Sprintf("Error: '%s'", err))
-	} else {
-		csvContent, err := gocsv.MarshalString(&transactions)
-		if err != nil {
-			c.String(http.StatusBadRequest, fmt.Sprintf("Error: '%s'", err))
-		} else {
-			c.String(http.StatusOK, csvContent)
-		}
 	}
 }
 
